2004-06-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/dir.c (makefilelist): Fix broken movement of point_in_line
	when parsing quoted names.  Simplify structure by moving default
	handling upward.

2004-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* contrib/ocs (SYSDIR): Only set to /usr/local/lib/cs if not
	already set in outside environment.  Check that $(SYSDIR) exists
	before proceeding.  From SF patch #976788 by Neil Horman.

2004-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/vpinit.c (vpinit): Renamed argument currentdir to
	current_dir to avoid name clash with same-named global.

	* src/command.c (Pattern): Renamed from "pattern", to avoid
	multitute of compiler warnings about shadowing by locally defined
	variables of the same name.  Changed all usages of this variable,
	too.
	(command): Test for individual KEY_* macros instead of TERMINFO
	whenever one of the KEY_* macros is referenced.  This should
	reduce the TERMINFO mess a little.

	* src/find.c (read_block): Renamed from "readblock", to avoid name
	clash with QNX system function of that name.  Calls changed
	accordingly, all over the place.

	* src/display.c: Fix fall-back definition of sigjmp_buf.

	* src/constants.h: Activate TERMINFO for FreeBSD.

	* src/input.c (mygetline): New function.  Poor-man's readline
	imitation.  From SF Patch #937310.

	* src/global.h (mygetline): Prototype added.

	* src/command.c (command): Use mygetline() instead of letting
	ncsurses doing it all.  Make Ctrl-B/F special hotkeys that are
	handled here instead of in mygetline(), to preserve their meaning.

	* packages/cscope.spec: Updated by SF patch #920586 to be more
	compatible with current expectations.

2004-02-24  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* configure.in (AC_CHECK_HEADERS): Added check for NSK-Tandem
	special magic header file <floss.h>.

	* src/global.h [HAVE_FLOSS_H]: Added #include <floss.h> if it
	exists.
